# feat

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  README.md  api_c.html  basics.html  config  configure  contributing.html  cpp_api.html  dconfig  environment.yml  evaluation.h  fewtwo.h  genindex.html  index.html  install  installation.html  main.cc  mkdocs.yml  objects.inv  overview.html  population.h  py_api.html  pyproject.toml  rebuild  requirements.txt  search.html  searchindex.js  selection.h  setup.cfg  setup.py  unordered_set_example.cc  version.py  warnings.txt
.doctrees/: api_c.doctree  cpp_api.doctree  environment.pickle  index.doctree  py_api.doctree
.doctrees/examples/: archive.doctree  command_line.doctree  longitudinal.doctree
.doctrees/guide/: basics.doctree  overview.doctree
.github/workflows/: ci.yml  docs.yml  pypi.yml
_site/: genindex.html  log  objects.inv  search.html
_site/.doctrees/: contributing.doctree  environment.pickle
_site/cpp_api/: annotated.html  dir_000001_000007.html  dir_000001_000008.html  dir_000002_000004.html  dir_000004_000005.html  dir_000010_000005.html  dir_000017_000001.html  dir_21ec6d1f240157922d87b47e5ce3ede6.html  dir_5081caf4253f166c37035217032e821c_dep.map  dir_5e81332a77011d51fa136814e2e3f009.html  (+132 more)
_sources/: api_c.md.txt  index.md.txt  install.rst.txt  overview.md.txt
_static/: copybutton.css  documentation_options.js
ci/: .travis_docs.sh  .travis_insall.sh  .travis_install.sh  .travis_install.sh.swp  .travis_test.sh  .travis_test.sh.swp  ci-environment.yml  docs-environment.yml  test-environment.yml
comparision_scripts/: boxplot.py  dt-c.py  dt-r.py  feat-c.py  feat-r.py  linreg-r.py  logreg-c.py  mlp-c.py  nb-c.py  rf-c.py  runRegressionScripts.sh  runclassfierscripts.sh  runscripts.h
cpp_api/: annotated.html  annotated_dup.js  classes.html  dir_000000_000017.html  dir_000001_000005.html  dir_000001_000010.html  dir_000002_000001.html  dir_000002_000004.html  dir_000002_000008.html  dir_000004_000005.html  dir_000006_000002.html  dir_000006_000008.html  dir_000007_000001.html  dir_000008_000005.html  dir_000008_000006.html  dir_000008_000009.html  dir_000010_000004.html  dir_000010_000005.html  dir_000011_000005.html  dir_000014_000005.html  dir_000017_000001.html  dir_5081caf4253f166c37035217032e821c.html  dir_5081caf4253f166c37035217032e821c_dep.dot  dir_5081caf4253f166c37035217032e821c_dep.map  dir_51c76d184f35293616e0b9efe8fd302e_dep.dot  dir_51c76d184f35293616e0b9efe8fd302e_dep.md5  dir_5dd65160827af56e6353642206b80129.html  dir_5dd65160827af56e6353642206b80129_dep.dot  dir_5dd65160827af56e6353642206b80129_dep.md5  dir_5e81332a77011d51fa136814e2e3f009.html  dir_5e81332a77011d51fa136814e2e3f009_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_70637914f34f03b08aa366501dcc959b.html  dir_71553c93ca779327a2e9b9bdf1e6160d.html  dir_71553c93ca779327a2e9b9bdf1e6160d_dep.map  dir_71553c93ca779327a2e9b9bdf1e6160d_dep.md5  dir_79c931fe3d68a17018fce74bac367faf_dep.md5  dir_a8ba1cdc789e15ce0e3acecc77cc7168_dep.map  dir_a8ba1cdc789e15ce0e3acecc77cc7168_dep.md5  (+246 more)
docs/: .fuse_hidden0010cbe500000073  .fuse_hidden0010cc9500000074  .fuse_hidden0010eefe00000076  .fuse_hidden00110e2400000078  .fuse_hidden00110e2500000079  .fuse_hidden00110e270000007b  Doxyfile  Makefile  annotated.html  annotated_dup.js  api.rst  api_c.md  classes.html  conf.py  config  config.bak  contributing.md  contributing.rst  cpp_api.rst  dir_18ae7af74d885898b85cbb543ae51b63.html  dir_18cee0c342c31827b3418e164566faa3.html  dir_368113a2ad281be450bed52e66f13c81.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_90ccbedd30978fa304e0881c1341fa84.html  dir_ac1bb9a98a8a77c3c6ad363e33af8aee.html  dir_b932f630223e29b7864a2b05c301fbb5.html  doc_links.rst  files.html  files.js  formula.repository  functions.html  functions_0x7e.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_func.js  (+132 more)
doctrees/: api_c.doctree  basics.doctree  contributing.doctree  cpp_api.doctree  environment.pickle  index.doctree  install.doctree  installation.doctree  overview.doctree  py_api.doctree
examples/: EXAMPLES.md  archive.html  archive.ipynb  automatic_differentiation.ipynb  d_heart.csv  d_heart.txt  d_pagie.tsv  featcvinput.txt  longitudinal.html  validate_test.csv
feat/: __init__.py  brush_setup.py  cyfeat.pyx  feat.py  pyfeat.cpp  pyfeat.pyx  versionstr.py
guide/: basics.html  overview.html
html/: .buildinfo  api_c.html  basics.html  contributing.html  cpp_api.html  genindex.html  index.html  install.html  objects.inv  overview.html  py_api.html  search.html  searchindex.js  sitemap.xml
python/: feat.cpp  feat.py  feat.py.orig  feat.pyx  feat.so.REMOVED.git-id  fewtwo.py  fewtwo.pyx  metrics.py  model_.txt  pyTest.py  pyfeat.cpp  pyfeat.pyx  pyfeat.so.REMOVED.git-id  setup.py  version.py  versionstr.py
src/: archive.h  auto_backprop.cc  auto_backprop.h  cv_main.cc  data.cc  data.h  error.cc  error.h  evaluation.cc  evaluation.h  feat.cc  feat.h  feat.h.orig  featcv.cc  featcv.h  fewtwo.h  fewtwocv.h  hillclimb.cc  hillclimb.h  individual.cc  individual.h  init.h  io.h  main.cc  metrics.cc  metrics.h  ml.cc  ml.h  node.h  nodevector.cc  nodevector.h  nodewrapper.h  params.cc  params.h  parser.cc  population.cc  population.h  program.h  pybind.cc  rnd.cc  (+10 more)
tests/: CMakeLists.txt  CMakeLists.txt~  Makefile  arithNodes.exe.REMOVED.git-id  autoBP.exe.stackdump  autoDiff.exe.REMOVED.git-id  autoDiffTester.cc  backPropTests.cc  cudaTestUtils.cc  cudaTestUtils.h  eNodes.exe.REMOVED.git-id  evaluationTests.cc  featTests.cc  gtest.cc  gtest.cc~  individualTests.cc  miscNodes.exe.REMOVED.git-id  nb_tests.py  nodeTests.cc  nodes.exe.REMOVED.git-id  paramTests.cc  populationTests.cc  powerNodes.exe.REMOVED.git-id  randomTests.cc  sample.exe.REMOVED.git-id  selectionTests.cc  testUtils.cc  testsHeader.h  trigNodes.exe.REMOVED.git-id  variationTests.cc  wrappertest.py
(+5741 files in other folders)
